--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -1,6 +1,6 @@
-displayName=Example
-author=Nobody
+displayName=Foundry Helper
+author=Ashtrobeast
 support=
-description=An example greeter plugin
+description=Adds more UI elements to the Giants Foundry minigame.
 tags=
-plugins=com.example.ExamplePlugin
+plugins=com.foundryhelper.FoundryHelperPlugin
